Build our own MinIO image

--- a/docker/minio/Dockerfile
+++ b/docker/minio/Dockerfile
@@ -1,10 +1,22 @@
-# https://towardsdev.com/minio-latest-security-release-now-available-as-alpine-minio-docker-image-440af8e429ae
+# Building MinIO from source because they no longer provide a prebuilt image:
 # https://github.com/minio/minio/issues/21647
 
-FROM alpine/minio:RELEASE.2025-10-15T17-29-55Z
+# Update this when building new images.
+ARG MINIO_RELEASE=RELEASE.2025-10-15T17-29-55Z
 
-# `mc` is not included in alpine/minio, so we install it manually.
-USER root
+FROM golang:1.24-alpine AS minio-builder
+ARG MINIO_RELEASE
+RUN apk add --no-cache git
+RUN git clone --depth 1 --branch ${MINIO_RELEASE} https://github.com/minio/minio.git /src
+WORKDIR /src
+RUN go build -o /usr/local/bin/minio .
+
+FROM alpine:3.21
+RUN adduser -D -u 1000 minio
+COPY --from=minio-builder /usr/local/bin/minio /usr/local/bin/minio
+
+# We can use the prebuilt `mc` binary from MinIO's release page, they still
+# publish that.
 ARG TARGETARCH
 RUN wget -q https://dl.min.io/client/mc/release/linux-${TARGETARCH}/mc -O /usr/local/bin/mc && \
     chmod +x /usr/local/bin/mc
