Update docker image bases (#161)

--- a/docker/attune/Dockerfile
+++ b/docker/attune/Dockerfile
@@ -1,4 +1,4 @@
-FROM rust:1.89.0-bookworm AS build
+FROM rust:1.89.0-trixie AS build
 
 RUN apt-get update && apt-get install -y pkg-config libgpg-error-dev libgpgme-dev
 
@@ -16,7 +16,7 @@ COPY ./packages ./packages
 COPY ./scripts/fixtures ./scripts/fixtures
 RUN cargo build --release --bin attune-server
 
-FROM debian:bookworm-slim AS runtime
+FROM debian:trixie-slim AS runtime
 
 RUN apt-get update
 RUN apt-get install -y --no-install-recommends libssl3 ca-certificates libgpg-error0 libgpgme11 curl && rm -rf /var/lib/apt/lists/*
